# main.go
@@ -65,6 +65,9 @@ func main() {
 	mux.HandleFunc("GET /receipts/{receipt_id}", t.GetReceiptHandler)
 	mux.HandleFunc("PATCH /receipts/{receipt_id}", t.PatchReceiptHandler)
 	mux.HandleFunc("GET /receipts/{receipt_id}/items", t.GetReceiptItemsHandler)
+	mux.HandleFunc("POST /receipts/{receipt_id}/items", t.CreateReceiptItemHandler)
+	mux.HandleFunc("DELETE /receipts/{receipt_id}/items/{item_id}", t.DeleteReceiptItemHandler)
+	mux.HandleFunc("PATCH /receipts/{receipt_id}/item-groups/{group_id}", t.PatchReceiptItemGroupHandler)
 	mux.HandleFunc("GET /receipts/{receipt_id}/users", t.GetReceiptUsersHandler)
 	mux.HandleFunc("POST /receipts/{receipt_id}/users", t.AddUserToReceiptHandler)
 	mux.HandleFunc("DELETE /receipts/{receipt_id}/users/{user_id}", t.RemoveUserFromReceiptHandler)
